Fixing overlapping buttons

--- a/blocks/kiosk-cards/kiosk-cards.css
+++ b/blocks/kiosk-cards/kiosk-cards.css
@@ -7,7 +7,7 @@
     grid-gap: 16px;
 }
 
-.kiosk-cart-button{
+.add-to-cart{
   color:  #202020;
   background-color:  #ffea00;
   text-transform: uppercase;
@@ -22,16 +22,38 @@
   text-align: center;
   font-style: normal;
   cursor: pointer;
-  margin: 16px 0;
+  margin: 16px 16px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   border-radius: 0;
   line-height: 0.5;
-  left: 10px;
-  right: 10px;
   position: relative;
 }
+
+.more-details{
+    color:  #202020;
+    background-color:  #ffea00;
+    text-transform: uppercase;
+    font-size: 14px;
+    padding: 1em 2.5em;
+    font-weight: 600;
+    font-family: 'Source Sans Pro', 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
+    display: inline-block;
+    box-sizing: border-box;
+    text-decoration: none;
+    border: 2px solid transparent;
+    text-align: center;
+    font-style: normal;
+    cursor: pointer;
+    margin: 16px 16px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border-radius: 0;
+    line-height: 0.5;
+    position: relative;
+  }
 
 .kiosk-cards > ul > li {
     border: 1px solid var(--highlight-background-color);
